redact nav and CheckLoginRoute.js

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="optquick"
     />
+    <link rel="icon" type="image/x-icon" href="/images/general/logo.svg">
     <title>OptQuick</title>
   </head>
   <body>
