--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
-    <meta charset="utf-8" />
+    <meta charSet="utf-8" />
+    <meta http-equiv="Content-Language" content="ru" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="Author" content="Дубасов Кирилл Сергеевич" />
+    <meta name="Author" content="Воробушков Михаил Евгеньевич" />
+    <meta name="Copyright" content="Дубасов Кирилл Сергеевич" />
+    <meta name="Copyright" content="Воробушков Михаил Евгеньевич" />
+    <meta name="robots" content="all"/>
+    <title>OptQuick - площадка для продажи и покупки товаров оптом</title>
     <meta
-      name="description"
-      content="optquick"
+            name="description"
+            content="
+              На OptQuick вы можете покупать и продавать товары оптом с выгодой для вас.
+              Живое общение с покупателями и продавцами. Беслатные публикации объявлений в любом количестве.
+              Простая и быстрая регистрация пользователей.
+              На OptQuick вы всегда найдете товар, который нужен вам.
+            "
+    />
+    <meta
+            name="keywords"
+            content="optquick, товары оптом, оптов товар, каталоги товаров оптом цены, оптовик, сайт оптовиков, оптовик каталог"
     />
     <link rel="icon" type="image/x-icon" href="/images/general/logo.svg">
-    <title>OptQuick</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run OptQuick web-site.</noscript>
     <div id="root"></div>
   </body>
 </html>
